--- a/view/forms.html
+++ b/view/forms.html
@@ -9,7 +9,7 @@
                         <i class="icon ion-chevron-left all-chevron"></i>
                     </button>
                 </a>
-                <!--<ion-spinner icon="android" class="all-spinner" ng-hide="isLoaded"></ion-spinner>-->
+                <ion-spinner icon="android" class="all-spinner" ng-hide="isLoaded"></ion-spinner>
                 <div class="all-spinner" ng-hide="hasData || !isLoaded">
                     <span class="ion ion-archive all-ion"></span>
                     <span class="all-ion-text">no data available</span>
