--- a/view/form-instance.html
+++ b/view/form-instance.html
@@ -4,7 +4,7 @@
             <div  class="list" >      
                 <a class="item item-button-left test-item" ng-click="back()">
                     Completed: <span class="all-header-details">{{formName}}</span>
-                    <button class="button button-clear  button-positive" >
+                    <button class="button button-clear  button-calm" >
                         <i class="icon ion-chevron-left"></i>
                     </button>
                 </a>
@@ -16,7 +16,7 @@
                     <view-field class="item-accordion" data="field" ng-repeat="field in fieldset.field_instances"></view-field>
                 </div>                
                 <div class="padding">
-                    <button class="button button-block button-positive" ng-hide="timestamp" ng-click="share()">Share</button>
+                    <button class="button button-block button-calm" ng-hide="timestamp" ng-click="share()">Share</button>
                 </div>
             </div>
         </div>
