--- a/view/login.html
+++ b/view/login.html
@@ -14,7 +14,7 @@
             </label>
             <div class="item item-toggle">
                 remember me
-                <label class="toggle toggle-positive">
+                <label class="toggle toggle-calm">
                     <input type="checkbox" ng-model="user.rememberMe">
                     <span class="track">
                         <span class="handle"></span>
@@ -22,7 +22,7 @@
                 </label>
             </div>                   
             <div class="padding"> 
-                <button class="button button-full button-positive" type="submit" ng-disabled="loginForm.$invalid">
+                <button class="button button-full button-calm" type="submit" ng-disabled="loginForm.$invalid">
                     login
                 </button>
             </div>
