--- a/view/register.html
+++ b/view/register.html
@@ -4,7 +4,7 @@
             <div  class="list">                       
                 <a class="item item-button-left test-item" href="#/app/registers/{{projectId}}/{{categoryId}}">
                     Records: <span class="all-header-details">{{formName}}</span>
-                    <button class="button button-clear  button-positive" >
+                    <button class="button button-clear  button-calm" >
                         <i class="icon ion-chevron-left"></i>
                     </button>
                 </a>
@@ -24,7 +24,7 @@
                             <b>{{register['User']}}</b>
                         </div>
                         <div class="register-value">
-                            <a ng-click="change(register['instance_id'])" class="button button-block button-positive">View Form</a>
+                            <a ng-click="change(register['instance_id'])" class="button button-block button-calm">View Form</a>
                         </div>
                     </div>
 
