--- a/view/form/_loading.html
+++ b/view/form/_loading.html
@@ -1,6 +1,6 @@
 
 <ion-modal-view cache-view="false">
-    <ion-header-bar class="bar bar-header bar-positive">
+    <ion-header-bar class="bar bar-header bar-calm">
         <h3 class="title" style="text-align: center">Loading</h1>        
     </ion-header-bar>
     <ion-content class="has-header" scroll="false">
