--- a/view/form/_test.html
+++ b/view/form/_test.html
@@ -4,7 +4,7 @@
     }
 </style>
 <ion-modal-view class="Absolute-Center modal-time" ng-controller="TestModalCtrl">
-    <ion-header-bar class="bar bar-header bar-positive">
+    <ion-header-bar class="bar bar-header bar-calm">
         <h3 class="title" style="text-align: center">Signature</h1>        
     </ion-header-bar>
     <ion-content class="has-header padding" scroll="false">
@@ -38,8 +38,8 @@
             </span>
         </div>
         <div class="button-bar" >          
-            <a class="button button-positive button-outline" ng-click="templateClick()">Cancel</a>
-            <a class="button button-positive button-outline" ng-click="templateClick()">Set</a>
+            <a class="button button-calm button-outline" ng-click="templateClick()">Cancel</a>
+            <a class="button button-calm button-outline" ng-click="templateClick()">Set</a>
         </div>
     </ion-content>
 </ion-modal-view>
