--- a/view/forms.html
+++ b/view/forms.html
@@ -5,7 +5,7 @@
             <div  class="list">                       
                 <a class="item item-button-left test-item" ng-click="back()" href="#/app/categories/{{projectId}}">
                     {{categoryName}} - designs
-                    <button class="button button-clear  button-positive" >
+                    <button class="button button-clear  button-calm" >
                         <i class="icon ion-chevron-left all-chevron"></i>
                     </button>
                 </a>
@@ -27,7 +27,7 @@
             </div> 
         </div>
     </ion-content>
-    <div class="tabs tabs-positive tabs-icon-only">
+    <div class="tabs tabs-calm tabs-icon-only">
         <a class="tab-item">
             <i class="icon ion-ios-compose"></i>
         </a>
