--- a/view/registers.html
+++ b/view/registers.html
@@ -4,7 +4,7 @@
             <div  class="list">                       
                 <a class="item item-button-left test-item" ng-click="back()" href="#/app/categories/{{projectId}}">
                     {{categoryName}} - registers 
-                    <button class="button button-clear  button-positive" >
+                    <button class="button button-clear  button-calm" >
                         <i class="icon ion-chevron-left all-chevron"></i>
                     </button>
                 </a>
@@ -28,7 +28,7 @@
             </div> 
         </div>
     </ion-content>
-    <div class="tabs tabs-positive tabs-icon-only">
+    <div class="tabs tabs-calm tabs-icon-only">
         <a class="tab-item" href="#/app/category/{{projectId}}/{{categoryId}}">
             <i class="icon ion-ios-compose-outline"></i>
         </a>
