--- a/view/completed.html
+++ b/view/completed.html
@@ -10,8 +10,7 @@
                 </a>                
                 <ion-spinner icon="android" class="all-spinner" ng-hide="isLoaded"></ion-spinner>
                 <div class="all-spinner" ng-show="!hasData && isLoaded">
-                    <span class="ion ion-archive all-ion"></span>
-                    <span class="all-ion-text">no data available</span>
+                    <span class="all-ion-text">{{hasData}}</span>
                 </div>
                 <ion-refresher on-refresh="refresh()" pulling-text="Pull to refresh..." refreshing-text="Refreshing!" spinner="android"></ion-refresher>
                 <div class="list">
@@ -19,7 +18,7 @@
                         <i class="icon ion-search placeholder-icon"></i>
                         <input type="text" placeholder="Search">
                     </label>
-                    
+
                     <a class="item" ng-repeat="form in formInstances" ng-click="change(form.id)" >
                         <span class="col col-20 reg"><span class="form-item">{{form.code}}</span></span>
                         <span class="col col-70 reg"> {{form.name}}</span>
