--- a/view/forms.html
+++ b/view/forms.html
@@ -10,10 +10,9 @@
                     </button>
                 </a>
                 
-                <!--<div class="all-spinner" ng-show="!hasData && isLoaded">-->
-                <!--    <span class="ion ion-archive all-ion"></span>-->
-                <!--    <span class="all-ion-text">no data available</span>-->
-                <!--</div>-->
+                <div class="all-spinner" ng-show="!hasData && isLoaded">
+                    <span class="all-ion-text">{{hasData}}</span>
+                </div>
                 <div class="list all-itemlist">
                     <label style ="display: none" class="item item-input">
                         <i class="icon ion-search placeholder-icon"></i>
