--- a/view/form/_modal.html
+++ b/view/form/_modal.html
@@ -8,7 +8,7 @@
             <canvas id="{{hash}}" class="all-sketch" height="390px" width="340px" input ng-model="data.value" ng-required="data.required" sketch></canvas>            
         </form>
         <div class="button-bar" >
-            <a class="button button-calm button-outline" sketch-erase="{{hash}}" ng-click="exit(); erase()">{{hash}}</a>
+            <!--<a class="button button-calm button-outline" sketch-erase="{{hash}}" ng-click="exit(); erase()">{{hash}}</a>-->
             <a class="button button-calm button-outline" sketch-erase="{{hash}}"  ng-click="erase()">Clear</a>            
             <a class="button button-calm button-outline" ng-click="save(hash)">Save</a>
         </div>
