--- a/view/form/_all.html
+++ b/view/form/_all.html
@@ -8,6 +8,8 @@
 
 <!--text area-->
 <label for="{{hash}}" class="item item-input item-stacked-label calm-border" ng-class="{required: data.required, 'has-error': data.errors.length}" ng-if="data.type == 'textarea'">
+    <span class="all-label">{{data.name}}</span>
+    <span class="all-description">{{data.guidance}}</span>
     <textarea input id="{{hash}}" type="text" ng-model="data.value" placeholder="{{data.placeholder}}" ng-required="data.required">{{data.value}}</textarea>
 </label>
 
