--- a/view/registers.html
+++ b/view/registers.html
@@ -8,7 +8,7 @@
                         <i class="icon ion-chevron-left all-chevron"></i>
                     </button>
                 </a>
-                
+
                 <div class="all-spinner" ng-show="hasData && isLoaded" style="margin-top:50%">
                     <span class="all-ion-text" style="font-size: 15vw">{{hasData}}</span>
                 </div>
@@ -19,16 +19,16 @@
                         <input type="text" placeholder="Search">
                     </label>
                     <a class="item" ng-repeat="reg in registers" ng-click="change(reg.code)" >
-                        <span class="col col-20 reg"><span class="form-item">{{reg.code}}</span></span>
-                        <span class="col col-70 reg"> {{reg.name}}</span>
-                        <span class="col col-10 reg"><span class="badge badge-calm">{{reg.completed}}</span></span>
+                        <span class="col col-25 reg form-item">{{reg.code}}</span>
+                        <span class="col col-50 reg"> {{reg.name}}</span>
+                        <span class="col col-25 reg"><span class="badge badge-calm">{{reg.completed}}</span></span>
                     </a>
                 </div>
             </div> 
         </div>
     </ion-content>
     <div class="tabs tabs-calm tabs-icon-only">
-        <a class="tab-item" href="#/app/category/{{projectId}}/{{categoryId}}">
+        <a class="tab-item" ng-click="designsFix()">
             <i class="icon ion-ios-compose-outline"></i>
         </a>
         <a class="tab-item">
