--- a/view/registers.html
+++ b/view/registers.html
@@ -19,8 +19,8 @@
                         <input type="text" placeholder="Search">
                     </label>
                     <a class="item" ng-repeat="reg in registers" ng-click="change(reg.code)" >
-                        <span class="col col-25 reg form-item">{{reg.code}}</span>
-                        <span class="col col-50 reg"> {{reg.name}}</span>
+                        <span class="col col-25 reg form-item pp-whitespace">{{reg.code}}</span>
+                        <span class="col col-50 reg pp-whitespace"> {{reg.name}}</span>
                         <span class="col col-25 reg"><span class="badge badge-calm">{{reg.completed}}</span></span>
                     </a>
                 </div>
