--- a/view/form/_modal.html
+++ b/view/form/_modal.html
@@ -1,7 +1,7 @@
 
 <ion-modal-view class="Absolute-Center" ng-controller="SignatureModalCtrl" cache-view="false">
-    <ion-header-bar class="bar bar-header bar-calm">
-        <h3 class="title" style="text-align: center">Signature</h1>        
+    <ion-header-bar class="bar bar-header bar-calm" style="max-height:40px">
+        <h3 class="title" style="text-align: center;max-height:40px>Signature</h1>        
     </ion-header-bar>
     <ion-content class="has-header" scroll="false">
         <form name="x" data="value">
