--- a/css/style.css
+++ b/css/style.css
@@ -356,3 +356,11 @@ textarea {
 .pp-whitespace{
     white-space: pre-line;
 }
+.all-field-repeat{
+    position: absolute;
+    z-index: 10;
+    right: 15px;
+    top: 0px;
+    padding-top: 10px;
+    padding-right: 5px;
+}
