--- a/view/form.html
+++ b/view/form.html
@@ -9,13 +9,26 @@
                     </button>
                 </a>
                 <form>
-                    <div ng-repeat="fieldset in formData.field_group_designs" fs data="fieldset">
-                        <a id="a{{fieldset.$$hashKey}}" class="item-stable item all-field-header fs" scroll ng-click="toggleGroup(fieldset, goto)" ng-class="{active: isGroupShown(group)}">                            
+                    <div ng-repeat="fieldset in formData.field_group_designs track by $index" fs data="fieldset">
+
+                        <div class="item-stable item fs all-field-header" style="width:100%">
                             <span>{{fieldset.name}}</span>
-                            <span class="icon ion-chevron-down all-chevron"></span>
-                            <span class="all-field-description">{{fieldset.guidance}}</span>                            
-                        </a>
-                        <field data="field" ng-repeat="field in fieldset.field_designs" ng-show="isGroupShown(fieldset)"></field>
+                            <a id="a{{fieldset.$$hashKey}}" scroll ng-click="toggleGroup(fieldset, goto)" ng-class="{active: isGroupShown(group)}" style="float:right;width:50px;text-align:right">                                                            
+                                <span class="icon ion-chevron-down all-chevron"></span>                                                            
+                            </a>
+                            <a ng-click="repeatGroup(fieldset)" style="float:right;width:50px;text-align:right">                                                            
+                                <span class="icon ion-plus all-chevron"></span>                                                            
+                            </a>
+                            <span class="all-field-description">{{fieldset.guidance}}</span>
+                        </div>
+                        <div ng-repeat="field in fieldset.field_designs" style="position: relative" ng-show="isGroupShown(fieldset)">
+                            <!--                            <a ng-click="repeatField(fieldset, field)" style="float:right;width:50px;text-align:right">                                                            
+                                                            <span class="icon ion-plus all-chevron"></span>                                                            
+                                                        </a>-->
+                            <a class="all-field-repeat" ng-click="repeatField(fieldset, field)" ><span class="icon ion-plus all-chevron"></span> </a>
+                            <field data="field"></field>
+                        </div>
+
                     </div>
                     <div class="padding">
                         <button type="submit" ng-click="submit(formData)" value="Save" class="button button-block button-calm">Submit</button>
